--- a/cfg/yolov4-mish-416.cfg
+++ b/cfg/yolov4-mish-416.cfg
@@ -1,6 +1,10 @@
 [net]
+# Testing
+#batch=1
+#subdivisions=1
+# Training
 batch=64
-subdivisions=8
+subdivisions=16
 width=416
 height=416
 channels=3
@@ -11,17 +15,14 @@ saturation = 1.5
 exposure = 1.5
 hue=.1
 
-learning_rate=0.0013
-burn_in=1000
+learning_rate=0.001
+burn_in=2000
 max_batches = 500500
 policy=steps
 steps=400000,450000
 scales=.1,.1
 
-#cutmix=1
 mosaic=1
-
-#:104x104 54:52x52 85:26x26 104:13x13 for 416
 
 [convolutional]
 batch_normalize=1
@@ -746,7 +747,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -754,7 +755,7 @@ size=3
 stride=1
 pad=1
 filters=1024
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -762,7 +763,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 ### SPP ###
 [maxpool]
@@ -793,7 +794,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -801,7 +802,7 @@ size=3
 stride=1
 pad=1
 filters=1024
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -809,7 +810,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -817,7 +818,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [upsample]
 stride=2
@@ -831,7 +832,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [route]
 layers = -1, -3
@@ -842,7 +843,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -850,7 +851,7 @@ size=3
 stride=1
 pad=1
 filters=512
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -858,7 +859,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -866,7 +867,7 @@ size=3
 stride=1
 pad=1
 filters=512
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -874,7 +875,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -882,7 +883,7 @@ filters=128
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [upsample]
 stride=2
@@ -896,7 +897,7 @@ filters=128
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [route]
 layers = -1, -3
@@ -907,7 +908,7 @@ filters=128
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -915,7 +916,7 @@ size=3
 stride=1
 pad=1
 filters=256
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -923,7 +924,7 @@ filters=128
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -931,7 +932,7 @@ size=3
 stride=1
 pad=1
 filters=256
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -939,7 +940,7 @@ filters=128
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 ##########################
 
@@ -949,7 +950,7 @@ size=3
 stride=1
 pad=1
 filters=256
-activation=leaky
+activation=mish
 
 [convolutional]
 size=1
@@ -958,15 +959,15 @@ pad=1
 filters=255
 activation=linear
 
-
 [yolo]
 mask = 0,1,2
-anchors = 12, 16, 19, 36, 40, 28, 36, 75, 76, 55, 72, 146, 142, 110, 192, 243, 459, 401
+anchors = 10,13,  16,30,  33,23,  30,61,  62,45,  59,119,  116,90,  156,198,  373,326
 classes=80
 num=9
 jitter=.3
 ignore_thresh = .7
 truth_thresh = 1
+random=1
 scale_x_y = 1.2
 iou_thresh=0.213
 cls_normalizer=1.0
@@ -974,8 +975,6 @@ iou_normalizer=0.07
 iou_loss=ciou
 nms_kind=greedynms
 beta_nms=0.6
-max_delta=5
-
 
 [route]
 layers = -4
@@ -986,7 +985,7 @@ size=3
 stride=2
 pad=1
 filters=256
-activation=leaky
+activation=mish
 
 [route]
 layers = -1, -16
@@ -997,7 +996,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -1005,7 +1004,7 @@ size=3
 stride=1
 pad=1
 filters=512
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -1013,7 +1012,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -1021,7 +1020,7 @@ size=3
 stride=1
 pad=1
 filters=512
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -1029,7 +1028,7 @@ filters=256
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -1037,7 +1036,7 @@ size=3
 stride=1
 pad=1
 filters=512
-activation=leaky
+activation=mish
 
 [convolutional]
 size=1
@@ -1046,15 +1045,15 @@ pad=1
 filters=255
 activation=linear
 
-
 [yolo]
 mask = 3,4,5
-anchors = 12, 16, 19, 36, 40, 28, 36, 75, 76, 55, 72, 146, 142, 110, 192, 243, 459, 401
+anchors = 10,13,  16,30,  33,23,  30,61,  62,45,  59,119,  116,90,  156,198,  373,326
 classes=80
 num=9
 jitter=.3
 ignore_thresh = .7
 truth_thresh = 1
+random=1
 scale_x_y = 1.1
 iou_thresh=0.213
 cls_normalizer=1.0
@@ -1062,8 +1061,6 @@ iou_normalizer=0.07
 iou_loss=ciou
 nms_kind=greedynms
 beta_nms=0.6
-max_delta=5
-
 
 [route]
 layers = -4
@@ -1074,7 +1071,7 @@ size=3
 stride=2
 pad=1
 filters=512
-activation=leaky
+activation=mish
 
 [route]
 layers = -1, -37
@@ -1085,7 +1082,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -1093,7 +1090,7 @@ size=3
 stride=1
 pad=1
 filters=1024
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -1101,7 +1098,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -1109,7 +1106,7 @@ size=3
 stride=1
 pad=1
 filters=1024
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -1117,7 +1114,7 @@ filters=512
 size=1
 stride=1
 pad=1
-activation=leaky
+activation=mish
 
 [convolutional]
 batch_normalize=1
@@ -1125,7 +1122,7 @@ size=3
 stride=1
 pad=1
 filters=1024
-activation=leaky
+activation=mish
 
 [convolutional]
 size=1
@@ -1134,10 +1131,9 @@ pad=1
 filters=255
 activation=linear
 
-
 [yolo]
 mask = 6,7,8
-anchors = 12, 16, 19, 36, 40, 28, 36, 75, 76, 55, 72, 146, 142, 110, 192, 243, 459, 401
+anchors = 10,13,  16,30,  33,23,  30,61,  62,45,  59,119,  116,90,  156,198,  373,326
 classes=80
 num=9
 jitter=.3
@@ -1151,5 +1147,6 @@ iou_normalizer=0.07
 iou_loss=ciou
 nms_kind=greedynms
 beta_nms=0.6
-max_delta=5
 
+
+           
